css bug fixes for paul renner whitespac, alignment and others for #10

--- a/src/css/index_new.css
+++ b/src/css/index_new.css
@@ -49,9 +49,10 @@ body {
   white-space: nowrap
 }
 
-  .container{
+  /* .container{
     width: 100%;
-  }
+    height: auto;
+  } */
 
   .header {
     width: 100%;
@@ -95,26 +96,35 @@ body {
   .desktop__paul{
     display: flex;
     height: auto;
-    width:100%;
+    justify-content: center;
+    width:100vw;
+    padding: 2rem;
+    padding-bottom: 0rem;
+    background-color: var(--beige);
   }
-  .renner{
-    width: 50%;
+  /* .renner{
+    width: 100%;
     height: 100vh;
     position: relative;
     z-index: 2;
-  }
+    background-color: var(--beige);
+  } */
   .jaar__illu{
     width: 50%;
-    height: 100vh;
+    height: auto;
   }
 
   .PaulRenner {
-     height: 100vh;
+     /* height: 100vh; */
+     /*new test*/
+    height: auto;
+     /*end test*/
     width: 100%;
     /* overflow: scroll; */
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: var(--beige);
   }
 
   .PaulRenner__illuDiv {
@@ -138,18 +148,18 @@ body {
     flex-direction: column;
     align-items: center;
     overflow: hidden;
-    width: 100%;
+    width: 80%;
 
   }
 
   .PaulRenner__text--lead {
-    width: 80%;
+    width: 100%;
     margin-top: 2rem;
     font-family: var(--futuraDemi);
   }
 
   .PaulRenner__text--body {
-    width: 80%;
+    width: 100%;
     margin-top: 2rem;
     margin-bottom: 2rem;
   }
@@ -305,17 +315,17 @@ body {
 
   .NaziGermany__horizontal--2--circle{
     background-color: white;
-    border-radius: 100%;
-    width: 35vw;
-    height: 35vw;
+    border-radius: 50%;
+    width: 55vw;
+    height: 55vw;
     display: flex;
     justify-content: center;
     align-items: center;
   }
 
-  .NaziGermany__horizontal--2--circle > p {
-    width: 30vw;
-  }
+  /* .NaziGermany__horizontal--2--circle > p {
+    width: inherit/2;
+  } */
 
   .NaziGermany__horizontal--2--titleRenner{
     font-size: 1.5rem;
@@ -349,7 +359,7 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: 110vh;
     overflow: hidden;
   }
 
@@ -378,10 +388,15 @@ body {
     display: flex;
     justify-content: center;
     width: 80%;
+    margin-top: 5rem;
+  }
+  .presidential__graphic{
+    margin: 1rem;
   }
 
   .presidential__text{
-    width: 50%;
+    margin: 1rem;
+    width: 100%;
   }
 
 
@@ -497,6 +512,16 @@ body {
   .eye{
     display: block;
   }
+
+  .culture__protest--image{
+    transition: scale(1.5);
+  }
+
+
+  .presidential{
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
   @media (max-width: 767px) {
@@ -605,6 +630,10 @@ body {
     height: auto;
   }
 
+   /* .culture__protest--image{
+    transition: scale(1.5);
+  } */
+
   .culture__text{
     flex-direction: column-reverse;
     align-items: center;
@@ -621,6 +650,11 @@ body {
 
   .culture__text--img{
     width: 80%;
+  }
+
+  .presidential{
+    flex-direction: column;
+    align-items: center;
   }
 }
 
